refactor(api): suppression de l'entité User et alignement sur la V7
La migration V7 de MSPR-DB supprime la table users et les colonnes
user_id des tables nutrition_entries, exercise_entries et
biometric_entries. Les datasets Kaggle sont hétérogènes et anonymisés :
aucun identifiant utilisateur commun n'y est rattaché.

Côté API :
- suppression des classes User, UserDTO, UserService, UserRepository,
  UserController (la gestion d'identité est déléguée à MSPR-AUTH)
- retrait des relations @ManyToOne User et du champ user_id dans les
  entités NutritionEntry, ExerciseEntry, BiometricEntry + DTO associés
- retrait des méthodes findByUserId des repositories
- services simplifiés en CRUD paginés globaux, sans contrôle d'owner
- purge des statistiques user-centric dans DataQualityService
- réécriture des tests controllers sur les services mockés

JwtAuthenticationFilter et JwtTokenProvider sont inchangés : ils
valident toujours les JWT HS512 émis par MSPR-AUTH via le secret
partagé BETTER_AUTH_SECRET.

Tests : 19 passants, 0 échec.